--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -7,8 +7,8 @@ header,
 footer {
     width: 100%;
     height: 120px;
-    background-color: blue;
-    color: white;
+    background-color: pink;
+    color: #5e224a;
 }
 
 h1,
